# golang-interpreter

./: .gitignore  .gitlab-ci.yml  Golang.cabal  LICENSE  Makefile  README.md  TODO.md  comment-body.md  detect_latest.sh  find_clones.py  install_linter.sh.gpg  lint_filesystem.sh  mylint.sh  package.yaml  stack.yaml  tasks.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: BuildMaster.yml  BuildMasterPost.yml  PR.ocamlformat.yml  PR.yml  PrPost.yml  build.yml  test.yml
.gitlab/merge_request_templates/: Task.md
C/: .ocamlformat  C.opam  README.md  REPL.ml  dune  dune-project  repl.t
C/demos/: demoConvAdvance.ml  demoFactorial.ml  demoFib.ml  demoFree.ml  demoList.ml  demoMemcpy.ml  demoMultiPtrs.ml  demoParser.ml  demoStructConv.ml  dune  tests.t  trash.ml
C/lib/: ast.ml  bSrch.ml  dune  interpreter.ml  interpreter2.ml  interpreterctx.ml  parser.ml
Golang/: ChangeLog.md  Golang.cabal  Lambda.opam  dune  package.yaml
Golang/QCtest/: QCTests.ml  runULC.ml
Golang/app/: Main.hs
Golang/demos/: demoAO.ml  fib.go  interpretTests.t  runTest
Golang/demos/expr/: strings.go
Golang/demos/for/: jump.go
Golang/demos/func/: fib.go
Golang/demos/op/: bool.go  combined.go
Golang/src/: Ast.hs  Interpreter.hs
Golang/src/interpreter/: BaseFunc.hs  Errors.hs  Interpreter.hs  Runtime.hs
Golang/src/parser/: Lexer.hs  Parser.hs
Golang/test/: Spec.hs
Lambda/: Lambda.opam  Makefile  README.md  REPL.ml  dune  dune-project
Lambda/QCtest/: QCTests.ml  dune
Lambda/demos/: demoAO.ml  demoNO.ml  demoParse.ml  dune  parsingTests.t
Lambda/lib/: Pprintast.ml  Printast.ml  ast.mli  dune  interpret.ml  lambda.ml  parser.ml  parser.mli  tests.ml  utils.ml
Lua/: .ocamlformat  Lua.opam  REPL.ml  dune-project
Lua/demos/: complexTests.t  demoBreak.ml  demoEmpty.ml  demoEratosthenes.ml  demoFactorial.ml  demoFail.ml  demoForNumerical.ml  demoHighFunctions.ml  demoIf.ml  demoLocal.ml  demoMultiDim.ml  demoNullKeyTable.ml  demoTable.ml  demoWhile.ml  dune  emptyTests.t  failTests.t  ifTests.t  loopTests.t  scopeTests.t  tableTests.t
Lua/lib/: ast.ml  dune  hashtbl_p.ml  interpreter.ml  parser.ml  tests.ml  var_zipper.ml
Lua/lua_samples/: dirty_global.lua  factorial.lua  use_local.lua
OCamlEff/: .ocamlformat  Makefile  OCamlEff.opam  README.md  REPL.ml  dune  dune-project
OCamlEff/demos/: doubleHandling.ml  doubleHandling.t  dune  exceptionImitation.ml  exceptionImitation.t  failureEffect.ml  failureEffect.t  fixpoint.ml  fixpoint.t  interpreterTests.ml  interpreterTests.t  matrixAddition.ml  matrixAddition.t  parseDemo.ml  parsingTests.t  tailrecFold.ml  tailrecFold.t
OCamlEff/lib/: ast.ml  ast.mli  dune  env.ml  eval.ml  lambda.ml  parser.ml  parserTests.ml  tester.ml  tests_tbd.ml  typing.ml  typingTests.ml
OCamlTyEff/: OCamlTyEff.opam  README.md  REPL.ml  dune  dune-project  repl.t
OCamlTyEff/QCtest/: QCTests.ml  dune  runULC.ml
OCamlTyEff/lib/: ast.ml  bind.ml  check.ml  dune  interpret.ml  parser.ml  std.ml  tychk.ml  utils.ml
app/: Main.hs
demos/: for.go  if.go  runNDTest  runTest
demos/func/: gor.go  nd_gor2.go  nd_many_gor.go  rec.go
demos/op/: comp.go  int.go
mini-Lua/: .ocamlformat  Makefile  dune
mini-Lua/lib/: ast.ml  parser.ml  tests.ml
src/: Ast.hs
src/interpreter/: BaseFunc.hs  Concurrency.hs  Errors.hs  Interpreter.hs  Runtime.hs  Types.hs
src/parser/: Lexer.hs  Parser.hs
