(env
 (dev
  (flags
   (:standard -warn-error -A -w -3-9-32-58)))
 (release
  (flags
   (:standard -warn-error -A -w -26)
   (:standard -warn-error -A -w -58)
   (-short-paths))))

(executable
 (name REPL)
 (public_name REPL)
 (modules REPL)
 (libraries C.Lib)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))
