opam-version: "2.0"
name: "REPLACE_BY_REAL_LANGUGE_NAME"
version: "0.0.1"
synopsis: """ What mini language are you implementing? """
#description: """ """
maintainer: "STUDENT_EMAIL@domain.com"
#authors: "STUDENT NAME <STUDENT_EMAIL@domain.com>"
license: "LGPL-3.0-or-later"
homepage: "not specified"
#doc: "https://ocaml-ppx.github.io/ppxlib/"
bug-reports: "not specified"
depends: [
  "ocaml" {>= "4.04.1"}
  #"base"
  "ppx_expect"
  "dune"
  "ocamlformat" { build }
]


build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
