(lang dune 2.8)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-only)

(authors "Alexander Fedkin & Sergey Loktev")

(maintainers "Alexander Fedkin & Sergey Loktev")

(bug_reports "loktevsergay.2003@gmail.com")

(homepage "https://github.com/zishkaz/fp2021")

(package
 (name OCamlEff) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "OCaml + effects")
 (description
  "FIXME. A longer description, for example, which are the most interesing features being supported, etc.")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  qcheck-core
  ppx_deriving
  ppx_expect
  (odoc :with-doc)
  (ocamlformat :build)
  base
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
