(lang dune 2.8)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-only)

(authors "Ilya Muravjov")

(maintainers "Ilya Muravjov")

(bug_reports "https://github.com/IlyaMuravjov/fp2021/issues")

(homepage "https://github.com/IlyaMuravjov/fp2021")

(package
 (name OCamlTyEff) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "OCaml with typed effects")
 (description
  "FIXME. A longer description, for example, which are the most interesing features being supported, etc.")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  qcheck-core
  ppx_deriving
  ppx_expect
  ppx_show
  (odoc :with-doc)
  (ocamlformat :build)
  base
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
