(lang dune 2.8)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-only)

(authors "Ilya Muravjov")

(maintainers "Ilya Muravjov")

(bug_reports "https://github.com/IlyaMuravjov/fp2021/issues")

(homepage "https://github.com/IlyaMuravjov/fp2021")

(package
 (name OCamlTyEff) ;
 (synopsis "OCaml with typed effects")
 (description
  "OCaml implementation with type checker forcing explicit side effect specification for function types (e.g. -[IO]->, -[Asgmt]->, -[exc Exc1]->, -['e]->)")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  qcheck-core
  ppx_deriving
  ppx_expect
  ppx_show
  (odoc :with-doc)
  (ocamlformat :build)
  base
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
