(env
 (dev
  (flags
   (:standard -warn-error -A -w -26)
   (-short-paths))))

(executable
 (name demoList)
 (modules demoList)
 (libraries C.Lib)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))

(executable
 (name demoFactorial)
 (modules demoFactorial)
 (libraries C.Lib)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))

(executable
 (name demoMemcpy)
 (modules demoMemcpy)
 (libraries C.Lib)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))

(executable
 (name demoFib)
 (modules demoFib)
 (libraries C.Lib)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))

(executable
 (name demoFree)
 (modules demoFree)
 (libraries C.Lib)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))

(executable
 (name demoMultiPtrs)
 (modules demoMultiPtrs)
 (libraries C.Lib)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))

(executable
 (name demoStructConv)
 (modules demoStructConv)
 (libraries C.Lib)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))

(executable
 (name demoConvAdvance)
 (modules demoConvAdvance)
 (libraries C.Lib)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))

(cram
 (deps
  ./demoConvAdvance.exe
  ./demoStructConv.exe
  ./demoList.exe
  ./demoFactorial.exe
  ./demoMemcpy.exe
  ./demoFib.exe
  ./demoFree.exe
  ./demoMultiPtrs.exe))
