(executable
 (name demoAO)
 (modules demoAO)
 (public_name demoAO)
 (libraries lambda_lib))

(executable
 (name demoNO)
 (modules demoNO)
 (public_name demoNO)
 (libraries lambda_lib))

(executable
 (name demoParse)
 (modules demoParse)
 (public_name demoParse)
 (libraries lambda_lib))

(cram
 (deps ./demoNO.exe ./demoAO.exe ./demoParse.exe))
