(env
 (dev
  (flags
   (:standard -warn-error -A -w -26)
   (-short-paths))))

(executable
 (name demoHighFunctions)
 (modules demoHighFunctions)
 (libraries Lua.Lib)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))

(executable
 (name demoFactorial)
 (modules demoFactorial)
 (libraries Lua.Lib)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))

(executable
 (name demoIf)
 (modules demoIf)
 (libraries Lua.Lib)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))

(executable
 (name demoLocal)
 (modules demoLocal)
 (libraries Lua.Lib)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))

(executable
 (name demoForNumerical)
 (modules demoForNumerical)
 (libraries Lua.Lib)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))

(executable
 (name demoBreak)
 (modules demoBreak)
 (libraries Lua.Lib)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))

(executable
 (name demoEratosthenes)
 (modules demoEratosthenes)
 (libraries Lua.Lib)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))

(executable
 (name demoFail)
 (modules demoFail)
 (libraries Lua.Lib)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))

(executable
 (name demoWhile)
 (modules demoWhile)
 (libraries Lua.Lib)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))

(cram
 (deps
  ./demoForNumerical.exe
  ./demoWhile.exe
  ./demoBreak.exe
  ./demoIf.exe
  ./demoLocal.exe
  ./demoEratosthenes.exe
  ./demoFactorial.exe
  ./demoHighFunctions.exe
  ./demoFail.exe))
